--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a class="icons" href="">
           <img src="assets/images/profile.svg" alt="profile" />
         </a>
-        <a class="icons" href="">
+        <a class="icons" href="./shoppingbag.html">
           <img src="assets/images/cart.svg" alt="cart" />
         </a>
         <a href="">
@@ -34,11 +34,11 @@
         </a>
       </div>
       <nav class="header_menu">
-        <a class="menu" href=""> HOME </a>
-        <a class="menu" href=""> STORE </a>
+        <a class="menu" href="./index.html"> HOME </a>
+        <a class="menu" href="./bedroomproducts.html"> STORE </a>
         <a class="menu" href=""> ACCESSORIES </a>
         <a class="menu" href=""> BRAND </a>
-        <a class="menu" href=""> PAGES </a>
+        <a class="menu" href="./singleproduct.html"> PAGES </a>
         <a class="menu" href=""> ABOUT US </a>
         <a class="menu" href=""> NEWS </a>
         <a class="menu" href=""> CONTACT US </a>
