--- a/shoppingbag.html
+++ b/shoppingbag.html
@@ -16,13 +16,13 @@
         <div class="header_container">
             <div class="header_title title_2">MOODY STUDIO</div>
             <div class="header_icons">
-                <a class="icons" href="">
+                <a class="icons" href="./index.html">
                     <img src="assets/images/search.svg" alt="search" />
                 </a>
                 <a class="icons" href="">
                     <img src="assets/images/profile.svg" alt="profile" />
                 </a>
-                <a class="icons" href="">
+                <a class="icons" href="./shoppingbag.html">
                     <img src="assets/images/cart.svg" alt="cart" />
                 </a>
                 <a href="">
@@ -30,15 +30,16 @@
                 </a>
             </div>
             <nav class="header_menu">
-                <a class="menu" href=""> HOME </a>
-                <a class="menu" href=""> STORE </a>
-                <a class="menu" href=""> ACCESSORIES </a>
-                <a class="menu" href=""> BRAND </a>
-                <a class="menu" href=""> PAGES </a>
-                <a class="menu" href=""> ABOUT US </a>
-                <a class="menu" href=""> NEWS </a>
-                <a class="menu" href=""> CONTACT US </a>
-            </nav>
+                <nav class="header_menu">
+                    <a class="menu" href="./index.html"> HOME </a>
+                    <a class="menu" href="./bedroomproducts.html"> STORE </a>
+                    <a class="menu" href=""> ACCESSORIES </a>
+                    <a class="menu" href=""> BRAND </a>
+                    <a class="menu" href="./singleproduct.html"> PAGES </a>
+                    <a class="menu" href=""> ABOUT US </a>
+                    <a class="menu" href=""> NEWS </a>
+                    <a class="menu" href=""> CONTACT US </a>
+                  </nav>
         </div>
     </header>
     <main>
